--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
+
+# ide
+.idea
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -18,5 +22,6 @@
 # vendor/
 
 # Go workspace file
+go.sum
 go.work
 go.work.sum
